--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ todolist/__pycache__/todo_app.cpython-311.pyc
 todolist/GEMINI.md
 GEMINI.md
 yolov8n.pt
+notepad/__pycache__/notepad_app.cpython-311.pyc
